--- a/Introduction to Linear Programming with Python - Part 2.ipynb
+++ b/Introduction to Linear Programming with Python - Part 2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,11 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/pulp.py:1424: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "my_lp_problem = pulp.LpProblem(\"My LP Problem\", pulp.LpMaximize)"
    ]
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "My LP Problem:\n",
+       "My_LP_Problem:\n",
        "MAXIMIZE\n",
        "4*x + 3*y + 0\n",
        "SUBJECT TO\n",
@@ -146,7 +155,7 @@
        "2 <= y Continuous"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,18 +177,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/i64/cbc /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/5592fe9281ed499f9b4b35f3e1bc50e5-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/5592fe9281ed499f9b4b35f3e1bc50e5-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 8 COLUMNS\n",
+      "At line 17 RHS\n",
+      "At line 21 BOUNDS\n",
+      "At line 23 ENDATA\n",
+      "Problem MODEL has 3 rows, 2 columns and 6 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 3 (0) rows, 2 (0) columns and 6 (0) elements\n",
+      "0  Obj 6 Primal inf 3.4999999 (1) Dual inf 6.9999998 (2)\n",
+      "0  Obj 6 Primal inf 3.4999999 (1) Dual inf 1e+10 (1)\n",
+      "2  Obj 73.75\n",
+      "Optimal - objective value 73.75\n",
+      "Optimal objective 73.75 - 2 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Optimal'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,10 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -227,27 +263,27 @@
     }
    ],
    "source": [
-    "for variable in my_lp_problem.variables():\n",
-    "    print \"{} = {}\".format(variable.name, variable.varValue)"
+    "for variable in my_lp_problem.variables():  \n",
+    "    print(\"{} = {}\".format(variable.name, variable.varValue))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73.75\n"
+      "Optimal Objective Value: 73.75\n"
      ]
     }
    ],
    "source": [
-    "print pulp.value(my_lp_problem.objective)"
+    "from pulp import value\n",
+    "\n",
+    "print(\"Optimal Objective Value:\", value(my_lp_problem.objective))"
    ]
   },
   {
@@ -262,21 +298,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "topics_alg",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
