--- a/Introduction to Linear Programming with Python - Part 3.ipynb
+++ b/Introduction to Linear Programming with Python - Part 3.ipynb
@@ -83,7 +83,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/pulp.py:1424: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate our problem class\n",
     "model = pulp.LpProblem(\"Profit maximising problem\", pulp.LpMaximize)"
@@ -133,6 +142,53 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/i64/cbc /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/dfe350d4df6e413691a03fd91b2cefcc-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/dfe350d4df6e413691a03fd91b2cefcc-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 8 COLUMNS\n",
+      "At line 21 RHS\n",
+      "At line 25 BOUNDS\n",
+      "At line 28 ENDATA\n",
+      "Problem MODEL has 3 rows, 2 columns and 6 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Continuous objective value is 330000 - 0.00 seconds\n",
+      "Cgl0004I processed model has 3 rows, 2 columns (2 integer (0 of which binary)) and 6 elements\n",
+      "Cutoff increment increased from 1e-05 to 15000\n",
+      "Cbc0012I Integer solution of -330000 found by DiveCoefficient after 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0001I Search completed - best objective -330000, took 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from -330000 to -330000\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                330000.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.00\n",
+      "Time (Wallclock seconds):       0.00\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'Optimal'"
@@ -151,10 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -166,14 +220,13 @@
     }
    ],
    "source": [
-    "# Print our decision variable values\n",
-    "print \"Production of Car A = {}\".format(A.varValue)\n",
-    "print \"Production of Car B = {}\".format(B.varValue)"
+    "print(\"Production of Car A = {}\".format(A.varValue))\n",
+    "print(\"Production of Car B = {}\".format(B.varValue))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -182,13 +235,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "330000.0\n"
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/i64/cbc /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/0ec7f6b57ff84c28876889319ce2b48c-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/0ec7f6b57ff84c28876889319ce2b48c-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 5 COLUMNS\n",
+      "At line 8 RHS\n",
+      "At line 9 BOUNDS\n",
+      "At line 10 ENDATA\n",
+      "Problem MODEL has 0 rows, 2 columns and 0 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Empty problem - 0 rows, 2 columns and 0 elements\n",
+      "Dual infeasible - objective value -0\n",
+      "DualInfeasible objective -0 - 0 iterations time 0.002\n",
+      "\n",
+      "Result - Linear relaxation unbounded\n",
+      "\n",
+      "Enumerated nodes:           0\n",
+      "Total iterations:           0\n",
+      "Time (CPU seconds):         0.00\n",
+      "Time (Wallclock Seconds):   0.01\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
+      "\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "# Print our objective function value\n",
-    "print pulp.value(model.objective)"
+    "from pulp import LpProblem, LpVariable, LpMaximize, value\n",
+    "\n",
+    "# Define your model and variables\n",
+    "model = LpProblem(\"My_LP_Problem\", LpMaximize)\n",
+    "A = LpVariable('A', lowBound=0)\n",
+    "B = LpVariable('B', lowBound=0)\n",
+    "\n",
+    "# Define the objective function and constraints\n",
+    "model += 4 * A + 3 * B  # Objective function\n",
+    "# Add your constraints here\n",
+    "\n",
+    "# Solve the model\n",
+    "model.solve()\n",
+    "\n",
+    "# Print the optimal value of the objective function\n",
+    "print(value(model.objective))\n"
    ]
   },
   {
@@ -207,21 +302,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "topics_alg",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
