--- a/Introduction to Linear Programming with Python - Part 4.ipynb
+++ b/Introduction to Linear Programming with Python - Part 4.ipynb
@@ -86,7 +86,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/pulp.py:1424: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate our problem class\n",
     "model = pulp.LpProblem(\"Cost minimising blending problem\", pulp.LpMinimize)"
@@ -215,6 +224,34 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/i64/cbc /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/65f636237284499fac78368ca3ab1e5a-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/65f636237284499fac78368ca3ab1e5a-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 15 COLUMNS\n",
+      "At line 48 RHS\n",
+      "At line 59 BOUNDS\n",
+      "At line 60 ENDATA\n",
+      "Problem MODEL has 10 rows, 6 columns and 26 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 10 (0) rows, 6 (0) columns and 26 (0) elements\n",
+      "0  Obj 0 Primal inf 65.5 (3)\n",
+      "6  Obj 140.955\n",
+      "Optimal - objective value 140.955\n",
+      "Optimal objective 140.955 - 6 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'Optimal'"
@@ -233,33 +270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weight of starch in premium sausages is 6.25 kg\n",
-      "The weight of starch in economy sausages is 4.375 kg\n",
-      "The weight of wheat in economy sausages is 6.125 kg\n",
-      "The weight of wheat in premium sausages is 2.75 kg\n",
       "The weight of pork in economy sausages is 7.0 kg\n",
-      "The weight of pork in premium sausages is 16.0 kg\n"
+      "The weight of wheat in economy sausages is 6.125 kg\n",
+      "The weight of starch in economy sausages is 4.375 kg\n",
+      "The weight of pork in premium sausages is 16.0 kg\n",
+      "The weight of wheat in premium sausages is 2.75 kg\n",
+      "The weight of starch in premium sausages is 6.25 kg\n"
      ]
     }
    ],
    "source": [
     "for var in ing_weight:\n",
     "    var_value = ing_weight[var].varValue\n",
-    "    print \"The weight of {0} in {1} sausages is {2} kg\".format(var[1], var[0], var_value)"
+    "    print(\"The weight of {0} in {1} sausages is {2} kg\".format(var[1], var[0], var_value))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -275,27 +310,27 @@
    "source": [
     "total_cost = pulp.value(model.objective)\n",
     "\n",
-    "print \"The total cost is €{} for 350 economy sausages and 500 premium sausages\".format(round(total_cost, 2))"
+    "print(f\"The total cost is €{round(total_cost, 2)} for 350 economy sausages and 500 premium sausages\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "topics_alg",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
