--- a/Introduction to Linear Programming with Python - Part 5.ipynb
+++ b/Introduction to Linear Programming with Python - Part 5.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -52,6 +52,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -285,13 +298,13 @@
        "      B              150000         20000              12          600"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "factories = pd.DataFrame.from_csv('csv/factory_variables.csv', index_col=['Month', 'Factory'])\n",
+    "factories = pd.read_csv('csv/factory_variables.csv', index_col=['Month', 'Factory'])\n",
     "factories"
    ]
   },
@@ -304,18 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "demand = pd.DataFrame.from_csv('csv/monthly_demand.csv', index_col=['Month'])"
+    "demand = pd.read_csv('csv/monthly_demand.csv', index_col=['Month'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -325,6 +338,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -406,7 +432,7 @@
        "12     100000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -453,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -473,11 +499,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/pulp.py:1424: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "model = pulp.LpProblem(\"Cost minimising scheduling problem\", pulp.LpMinimize)"
    ]
@@ -493,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -514,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -565,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -585,18 +620,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /opt/miniconda3/envs/topics_alg/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/i64/cbc /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/47514176cf5f44a4b56e44fd18b8c006-pulp.mps -timeMode elapsed -branch -printingOptions all -solution /var/folders/_l/7xr3qhx50rl1tsc0s6dt78hr0000gn/T/47514176cf5f44a4b56e44fd18b8c006-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 67 COLUMNS\n",
+      "At line 330 RHS\n",
+      "At line 393 BOUNDS\n",
+      "At line 442 ENDATA\n",
+      "Problem MODEL has 62 rows, 48 columns and 120 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Continuous objective value is 1.29037e+07 - 0.00 seconds\n",
+      "Cgl0002I 1 variables fixed\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 2 strengthened rows, 0 substitutions\n",
+      "Cgl0004I processed model has 18 rows, 17 columns (17 integer (9 of which binary)) and 38 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.9999\n",
+      "Cbc0038I Initial state - 0 integers unsatisfied sum - 6.5484e-11\n",
+      "Cbc0038I Solution found of 1.29064e+07\n",
+      "Cbc0038I Cleaned solution of 1.29064e+07\n",
+      "Cbc0038I Before mini branch and bound, 17 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.00 seconds)\n",
+      "Cbc0038I After 0.00 seconds - Feasibility pump exiting with objective of 1.29064e+07 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 12906400 found by feasibility pump after 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0001I Search completed - best objective 12906400, took 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 1.29064e+07 to 1.29064e+07\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                12906400.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.00\n",
+      "Time (Wallclock seconds):       0.00\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Optimal'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -624,13 +714,26 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>Factory Status</th>\n",
        "      <th>Production</th>\n",
+       "      <th>Factory Status</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Month</th>\n",
@@ -643,169 +746,169 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>70000</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>50000</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>45000</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>55000</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">3</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>70000</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>30000</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">5</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>140000</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">6</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>70000</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">7</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>90000</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">8</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>70000</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">9</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">10</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>190000</td>\n",
+       "      <td>190000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">11</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>80000</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">12</th>\n",
        "      <th>A</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Factory Status  Production\n",
+       "               Production  Factory Status\n",
        "Month Factory                            \n",
-       "1     A                     1       70000\n",
-       "      B                     1       50000\n",
-       "2     A                     1       45000\n",
-       "      B                     1       55000\n",
-       "3     A                     1       70000\n",
-       "      B                     1       60000\n",
-       "4     A                     1       30000\n",
-       "      B                     1      100000\n",
-       "5     A                     1      140000\n",
-       "      B                     0           0\n",
-       "6     A                     1       60000\n",
-       "      B                     1       70000\n",
-       "7     A                     1       90000\n",
-       "      B                     1       60000\n",
-       "8     A                     1       70000\n",
-       "      B                     1      100000\n",
-       "9     A                     1      100000\n",
-       "      B                     1      100000\n",
-       "10    A                     1      190000\n",
-       "      B                     0           0\n",
-       "11    A                     1       80000\n",
-       "      B                     1       60000\n",
-       "12    A                     1      100000\n",
-       "      B                     0           0"
+       "1     A           70000.0             1.0\n",
+       "      B           50000.0             1.0\n",
+       "2     A           45000.0             1.0\n",
+       "      B           55000.0             1.0\n",
+       "3     A           70000.0             1.0\n",
+       "      B           60000.0             1.0\n",
+       "4     A           30000.0             1.0\n",
+       "      B          100000.0             1.0\n",
+       "5     A          140000.0             1.0\n",
+       "      B               0.0             0.0\n",
+       "6     A           60000.0             1.0\n",
+       "      B           70000.0             1.0\n",
+       "7     A           90000.0             1.0\n",
+       "      B           60000.0             1.0\n",
+       "8     A           70000.0             1.0\n",
+       "      B          100000.0             1.0\n",
+       "9     A          100000.0             1.0\n",
+       "      B          100000.0             1.0\n",
+       "10    A          190000.0             1.0\n",
+       "      B               0.0             0.0\n",
+       "11    A           80000.0             1.0\n",
+       "      B           60000.0             1.0\n",
+       "12    A          100000.0             1.0\n",
+       "      B               0.0             0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -843,33 +946,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12906400.0\n"
+      "Total cost =  12906400.0\n"
      ]
     }
    ],
    "source": [
-    "# Print our objective function value (Total Costs)\n",
-    "print pulp.value(model.objective)"
+    "# Print the optimal value of the objective function\n",
+    "print(\"Total cost = \", pulp.value(model.objective))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "topics_alg",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
